Test system, reorganized folders structure, implemented redis client (#2)
